--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lotto Number Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <div class="container">
+        <header>
+            <h1>Lotto Number Generator</h1>
+            <div class="theme-switcher">
+                <label for="theme-switch">Dark Mode</label>
+                <input type="checkbox" id="theme-switch">
+            </div>
+        </header>
+        <main>
+            <div class="controls">
+                <button id="generate-btn">Generate Numbers</button>
+                <button id="copy-btn">Copy Numbers</button>
+            </div>
+            <div id="lotto-games" class="lotto-games"></div>
+        </main>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
